added prometheus scrapping for admin, ida, datashare, pms, mock-abis
Conflicts:
	deployment/sandbox-v2/helm/charts/pms/templates/misp-dep.yaml
	deployment/sandbox-v2/helm/charts/pms/templates/pm-dep.yaml
	deployment/sandbox-v2/helm/charts/pms/values.template.j2

--- a/deployment/sandbox-v2/helm/charts/admin/templates/admin-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/admin-dep.yaml
@@ -20,6 +20,10 @@ spec:
       maxSurge: {{ .Values.services.admin.podconfig.maxSurge }} 
   template:
     metadata:
+      annotations:
+        prometheus.io/path: {{ .Values.services.admin.annotation }}
+        prometheus.io/port: {{ .Values.services.admin.ports.containerPort | quote }}
+        prometheus.io/scrape: "'true'"
       labels:
         app: {{ .Values.services.admin.serviceName }} 
         component: {{ .Values.component }} 
