added prometheus scrapping for admin, ida, datashare, pms, mock-abis
Conflicts:
	deployment/sandbox-v2/helm/charts/pms/templates/misp-dep.yaml
	deployment/sandbox-v2/helm/charts/pms/templates/pm-dep.yaml
	deployment/sandbox-v2/helm/charts/pms/values.template.j2

--- a/deployment/sandbox-v2/helm/charts/pms/templates/partner-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/partner-dep.yaml
@@ -22,6 +22,10 @@ spec:
       maxSurge: {{ $podconfig.maxSurge }}
   template:
     metadata:
+      annotations:
+        prometheus.io/path: {{ .Values.services.partner.annotation }}
+        prometheus.io/port: {{ .Values.services.partner.ports.containerPort | quote }}
+        prometheus.io/scrape: "'true'"
       labels:
         app: {{ .Values.services.partner.serviceName }} 
         component: {{ .Values.component }} 
