added prometheus scrapping for idrepo print resident

--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/bioextractor-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/bioextractor-dep.yaml
@@ -21,6 +21,10 @@ spec:
       maxSurge: {{ $podconfig.maxSurge }}
   template:
     metadata:
+      annotations:
+        prometheus.io/path: {{ .Values.services.bioextractor.annotation }}
+        prometheus.io/port: {{ .Values.services.bioextractor.ports.containerPort | quote }}
+        prometheus.io/scrape: "'true'"
       labels:
         app: {{ .Values.services.bioextractor.serviceName }} 
         component: {{ .Values.component }} 
