[MOSIP-10586] added prereg captcha service

--- a/deployment/sandbox-v2/podconfig.yml
+++ b/deployment/sandbox-v2/podconfig.yml
@@ -213,6 +213,13 @@ podconfig:
       maxSurge: 1
       java_opts: "-Xms500M -Xmx500M"
 
+    captcha:
+      replicas: 1
+      minReadySeconds: 10
+      maxUnavailable: 0
+      maxSurge: 1
+      java_opts: "-Xms500M -Xmx500M"
+
     ui:
       replicas: 1
       minReadySeconds: 10
