--- a/deployment/sandbox-v2/helm/charts/pms/templates/ui-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/ui-svc.yaml
@@ -5,7 +5,8 @@ metadata:
   name: {{ .Values.services.ui.serviceName }}
   namespace: default
 spec:
-  ports:
-    - port: {{ .Values.services.ui.servicePort }} 
   selector:
     app: {{ .Values.services.ui.serviceName }}
+  ports:
+    - port: 80
+      targetPort: {{ .Values.services.ui.containerPort }}
