--- a/deployment/v3/utils/httpbin/vs.yaml
+++ b/deployment/v3/utils/httpbin/vs.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: httpbin
@@ -7,10 +7,11 @@ spec:
   - "*"
   gateways:
   - istio-system/public
+  - istio-system/internal
   http:
   - match:
       - uri:
-          prefix: /httpbin
+          prefix: /httpbin/
     rewrite:
       uri: "/"
     route:
