--- a/deployment/v3/cluster/aws/istio/gateway-internal.yaml
+++ b/deployment/v3/cluster/aws/istio/gateway-internal.yaml
@@ -12,4 +12,4 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - api-internal.sandbox.xyz.net
+    - api-internal.sandbox.mosip.net
