--- a/deployment/v3/cluster/aws/istio/gateway.yaml
+++ b/deployment/v3/cluster/aws/istio/gateway.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.istio.io/v1alpha3
+apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
   name: public
@@ -12,4 +12,4 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - api.sandbox.xyz.net
+    - api.sandbox.mosip.net
