--- a/deployment/v3/external/postgres/cluster/istio/gateway.yaml
+++ b/deployment/v3/external/postgres/cluster/istio/gateway.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: postgres
+  namespace: postgres
 spec:
   selector:
     istio: ingressgateway-internal
