--- a/deployment/v3/external/postgres/cluster/istio/vs.yaml
+++ b/deployment/v3/external/postgres/cluster/istio/vs.yaml
@@ -1,13 +1,13 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: postgres-postgresql
+  name: postgres
   namespace: postgres
 spec:
   hosts:
     - "*"
   gateways:
-  - istio-system/internal
+  - postgres
   tcp:
   - match:
     - port: 5432
