[MOSIP-13883] Minor updates to Istio install scripts.

--- a/deployment/v3/cluster/aws/istio/iop.yaml
+++ b/deployment/v3/cluster/aws/istio/iop.yaml
@@ -5,6 +5,7 @@ metadata:
   name: istio-operator-my
 spec:
   profile: default
+  # This is done to merge multiple slashes in http URLs, otherwise, MOSIP APIs may not work
   meshConfig:
     pathNormalization:
       normalization: MERGE_SLASHES
