--- a/deployment/v3/utils/httpbin/vs.yaml
+++ b/deployment/v3/utils/httpbin/vs.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: httpbin
+  namespace: httpbin
 spec:
   hosts:
   - "*"
