--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -281,9 +281,9 @@ repos:
     githubuser: ''
     githubpassword: ''
   ref_impl:
-    src: https://github.com/mosip/mosip-ref-impl
-    dest: '{{tmp_dir}}/mosip-ref-impl'
-    tag: develop
+    src: https://github.com/mosip/mosip-data
+    dest: '{{tmp_dir}}/mosip-data'
+    tag: develop-qa1
     githubuser: ''
     githubpassword: ''
   hotlist:
@@ -402,13 +402,13 @@ config_repo:
   # config server points to the same. Any changes done on local repo and will not  get reflected in 
   # the parent git repo. 
   git_repo_uri: https://github.com/mosip/mosip-config
-  version: develop
+  version: develop-qa1
   private: false #  true if repo is private
   gitusername: '' # if private==true set username here and password in secrets as below
   gitpassword: '{{secrets.config_repo.password}}'
   search_folders: sandbox # Subdir in repo containing properties
   local_git_repo:
-    enabled: false
+    enabled: true
     path: '{{nfs.folder}}/mosip-config'
     storage_size: 10Mi
 
