[MOSIP-11894] Istio install procedure updated.

--- a/deployment/v3/cluster/aws/istio/gateway-internal.yaml
+++ b/deployment/v3/cluster/aws/istio/gateway-internal.yaml
@@ -12,4 +12,11 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - api-internal.sandbox.mosip.net
+    - api-internal.v3box1.mosip.net
+  - port:
+      number: 5432 
+      name: postgres
+      protocol: TCP 
+    hosts:
+    - "*"
+
