--- a/deployment/v3/cluster/aws/istio/proxy-protocol.yaml
+++ b/deployment/v3/cluster/aws/istio/proxy-protocol.yaml
@@ -6,25 +6,7 @@ metadata:
 spec:
   workloadSelector:
     labels:
-      istio: ingressgateway
-  configPatches:
-  - applyTo: LISTENER
-    patch:
-      operation: MERGE
-      value:
-        listener_filters:
-        - name: envoy.filters.listener.proxy_protocol
-        - name: envoy.filters.listener.tls_inspector
----
-apiVersion: networking.istio.io/v1alpha3
-kind: EnvoyFilter
-metadata:
-  name: proxy-protocol-internal
-  namespace: istio-system
-spec:
-  workloadSelector:
-    labels:
-      istio: ingressgateway-internal
+      app: istio-ingressgateway
   configPatches:
   - applyTo: LISTENER
     patch:
