[MOSIP-13883] Major overhaul of Istio install procedure. Helm added for addons.

--- a/deployment/v3/cluster/aws/istio/chart/istio-addons/templates/gateway-internal.yaml
+++ b/deployment/v3/cluster/aws/istio/chart/istio-addons/templates/gateway-internal.yaml
@@ -2,7 +2,6 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: internal
-  namespace: istio-system
 spec:
   selector:
     istio: ingressgateway-internal
@@ -12,7 +11,7 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - api-internal.v3box1.mosip.net
+    - {{ .Values.internalHost }}
   - port:
       number: 5432 
       name: postgres
