--- a/deployment/v3/cluster/aws/istio/chart/istio-addons/templates/gateway.yaml
+++ b/deployment/v3/cluster/aws/istio/chart/istio-addons/templates/gateway.yaml
@@ -2,7 +2,6 @@ apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
   name: public
-  namespace: istio-system
 spec:
   selector:
     istio: ingressgateway
@@ -12,4 +11,4 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - api.v3box1.mosip.net
+    - {{ .Values.publicHost }}
