--- a/deployment/v3/cluster/global_configmap.yaml.sample
+++ b/deployment/v3/cluster/global_configmap.yaml.sample
@@ -1,11 +1,18 @@
 ## The data here is  of generic interest to modules in different namespaces hence this is marked as global.
+## Replace your domain names here
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: global
   namespace: default
 data:
+  mosip-api-host: api.sandbox.xyz.net
   mosip-api-host-url: https://api.sandbox.xyz.net
+  mosip-api-internal-host: api-internal.sandbox.xyz.net
   mosip-api-internal-url: https://api-internal.sandbox.xyz.net
+  mosip-activemq-host: activemq.sandbox.xyz.net
+  mosip-activemq-url: https://activemq.sandbox.xyz.net
+  mosip-kibana-host: kibana.sandbox.xyz.net
+  mosip-kibana-url: https://kibana.sandbox.xyz.net
   is_glowroot_env: absent
 
