[MOSIP-11894] Various procedures updated.

--- a/deployment/v3/external/biosdk/values.yaml
+++ b/deployment/v3/external/biosdk/values.yaml
@@ -1,3 +1,5 @@
 biosdk:     
+  ## This is url of biosdk lib accessed from within cluster.  BioSDK may be hosted outside the cluster
+  ## in which case change the URL accordingly.
   zippedLibUrl: http://artifactory.artifactory/artifactory/libs-release-local/biosdk/biosdk-lib.zip
   bioapiImpl: io.mosip.mock.sdk.impl.SampleSDK
