--- a/deployment/v3/external/iam/values.yaml
+++ b/deployment/v3/external/iam/values.yaml
@@ -21,3 +21,10 @@ replicaCount: 1
 serviceDiscovery:
   enabled: false
 
+resources:
+  limits: {}
+  #   cpu: 250m
+  #   memory: 1Gi
+  requests: 
+    cpu: 200m
+    memory: 1000Mi
