--- a/deployment/sandbox-v2/helm/charts/key-migrator/templates/keymigrator-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/key-migrator/templates/keymigrator-dep.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.services.key-migrator.serviceName }}
-  namespace: {{ .Release.Namespace }} 
+  name: {{ .Values.services.keymigrator.serviceName }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.services.key-migrator.serviceName }}
-    component: {{ .Values.component }} 
-    
+    app: {{ .Values.services.keymigrator.serviceName }}
+    component: {{ .Values.component }}
+
 spec:
-  {{ $podconfig := .Values.services.key-migrator.podconfig }}
+  {{ $podconfig := .Values.services.keymigrator.podconfig }}
   replicas: {{ $podconfig.replicas }}
   selector:
     matchLabels:
-      app: {{ .Values.services.key-migrator.serviceName }}
+      app: {{ .Values.services.keymigrator.serviceName }}
   minReadySeconds: {{ $podconfig.minReadySeconds }}
   strategy:
     type: RollingUpdate
@@ -22,42 +22,30 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ .Values.services.key-migrator.serviceName }}
-        component: {{ .Values.component }} 
+        app: {{ .Values.services.keymigrator.serviceName }}
+        component: {{ .Values.component }}
         exportLogs: {{ .Values.exportLogs }}
     spec:
       {{- include "dockerHubSecret" .  | indent 6}}
       containers:
-      - name: {{ .Values.services.key-migrator.serviceName }}
-        image: {{ .Values.services.key-migrator.dockerImage }}
-        imagePullPolicy: {{ .Values.imagePullPolicy }}
-        {{- include "resourcesDefinition" (dict "res" $podconfig.resources) | indent 8 }}
-        env:
-        - name: active_profile_env
-          value: {{ .Values.activeProfileEnv }} 
-        - name: spring_config_label_env
-          value: {{ .Values.springConfigLabel }} 
-        - name: spring_config_url_env
-          value: {{ .Values.configServerUrl }} 
-        - name: artifactory_url_env
-          value: {{ .Values.artifactoryUrl }} 
-        - name: is_glowroot_env
-          value: {{ .Values.isGlowroot }} 
-        - name: zip_file_path
-          value: {{ .Values.services.key.hsmClientZipPath }}
-        - name: JDK_JAVA_OPTIONS
-          value: {{ $podconfig.java_opts }}
-        ports:
-        - containerPort: {{ .Values.services.key-migrator.containerPort }}
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.services.key-migrator.healthUrl }}
-            port: {{ .Values.services.key-migrator.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-#        livenessProbe:
-#          httpGet:
-#            path: {{ .Values.services.key.healthUrl }} 
-#            port: {{ .Values.services.key.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }}
+        - name: {{ .Values.services.keymigrator.serviceName }}
+          image: {{ .Values.services.keymigrator.dockerImage }}
+          imagePullPolicy: {{ .Values.imagePullPolicy }}
+          {{- include "resourcesDefinition" (dict "res" $podconfig.resources) | indent 8 }}
+          env:
+            - name: active_profile_env
+              value: {{ .Values.activeProfileEnv }}
+            - name: spring_config_label_env
+              value: {{ .Values.springConfigLabel }}
+            - name: spring_config_url_env
+              value: {{ .Values.configServerUrl }}
+            - name: artifactory_url_env
+              value: {{ .Values.artifactoryUrl }}
+            - name: is_glowroot_env
+              value: {{ .Values.isGlowroot }}
+            - name: zip_file_path
+              value: {{ .Values.services.keymigrator.hsmClientZipPath }}
+            - name: JDK_JAVA_OPTIONS
+              value: {{ $podconfig.java_opts }}
+          ports:
+            - containerPort: {{ .Values.services.keymigrator.containerPort }}
