--- a/deployment/sandbox-v2/helm/charts/key-migrator/templates/keymigrator-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/key-migrator/templates/keymigrator-svc.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.services.key-migrator.serviceName }}
-  namespace: {{ .Release.Namespace }} 
+  name: {{ .Values.services.keymigrator.serviceName }}
+  namespace: {{ .Release.Namespace }}
 spec:
   ports:
-  - port: {{ .Values.services.key-migrator.servicePort }}
-    targetPort: {{ .Values.services.key-migrator.containerPort }}
+    - port: {{ .Values.services.keymigrator.servicePort }}
+      targetPort: {{ .Values.services.keymigrator.containerPort }}
   selector:
-    app: {{ .Values.services.key-migrator.serviceName }}
-
+    app: {{ .Values.services.keymigrator.serviceName }}
