[MOSIP-11894] Global storage class updated.

--- a/deployment/v3/cluster/global_configmap.yaml.sample
+++ b/deployment/v3/cluster/global_configmap.yaml.sample
@@ -10,6 +10,8 @@ data:
   mosip-api-url: https://api.sandbox.xyz.net
   mosip-api-internal-host: api-internal.sandbox.xyz.net
   mosip-api-internal-url: https://api-internal.sandbox.xyz.net
+  mosip-prereg-host: prereg.sandbox.xyz.net
+  mosip-prereg-url: https://prereg.sandbox.xyz.net
   mosip-activemq-host: activemq.sandbox.xyz.net
   mosip-activemq-url: https://activemq.sandbox.xyz.net
   mosip-kibana-host: kibana.sandbox.xyz.net
