--- a/deployment/v3/reporting/charts/kafka-essential/values.yaml
+++ b/deployment/v3/reporting/charts/kafka-essential/values.yaml
@@ -1,14 +1,24 @@
-# Default values for kafka-essentials.
+# Default values for kafka-essential.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+debezium:
+  image: debezium/connect:0.10.0.CR1
+  port: 8083
+
+kafkaClient:
+  image: confluentinc/cp-kafka:5.0.1
+
+kafka:
+  server: "kafka:9092"
+  groupId: "1"
+  topics:
+    offset: connect-offsets
+    config: connect-configs
+    status: connect-status
+
 
 imagePullSecrets: []
 nameOverride: ""
