fixed psycopg version to 2.8.6

--- a/deployment/sandbox-v2/roles/packages/psycopg2/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/packages/psycopg2/tasks/main.yml
@@ -1,12 +1,12 @@
 - name: Install psycopg2
   pip:
-    name: psycopg2-binary
+    name: psycopg2-binary==2.8.6
     state: present
   become: yes
 
 - name: Install psycopg2 for python3
   pip:
-    name: psycopg2-binary
+    name: psycopg2-binary==2.8.6
     state: present
     executable: /bin/pip2
   become: yes
