[MOSIP-12620] Postgres parameters for Reporting added.

--- a/deployment/v3/external/postgres/cluster/values.yaml
+++ b/deployment/v3/external/postgres/cluster/values.yaml
@@ -5,3 +5,8 @@ resources:
   requests: 
     cpu: 2000m
     memory: 3000Mi
+
+postgresqlExtendedConf:
+   wal_level: logical
+   max_wal_senders: 20
+   max_replication_slots: 10
