--- a/deployment/v3/cluster/aws/istio/chart/istio-addons/templates/authpolicies.yaml
+++ b/deployment/v3/cluster/aws/istio/chart/istio-addons/templates/authpolicies.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      istio: istio-ingressgateway
+      istio: ingressgateway
   action: DENY
   rules:
   - to:
