[MOSIP-12196] Keycloak procedure updated.

--- a/deployment/v3/external/iam/values.yaml
+++ b/deployment/v3/external/iam/values.yaml
@@ -9,7 +9,7 @@ auth:
 
 ingress:
   enabled: true
-  hostname: iam.mosip.net
+  hostname: iam.xyz.net
   annotations:
     ingress.kubernetes.io/class: nginx
 
