--- a/deployment/sandbox-v2/playbooks/functional-test.yml
+++ b/deployment/sandbox-v2/playbooks/functional-test.yml
@@ -2,21 +2,21 @@
 # play as tasks only run after roles if they are in the same play (for some reason)
 # and for us sequencing is important.
 #
-#- hosts: console
-#  gather_facts: true
-#  tasks:
-#    - {name: 'Create functional test report folder', file: {name: "{{ functional_test_report_dir }}", state: directory}}
+- hosts: console
+  gather_facts: true
+  tasks:
+    - name: Clone git repo for fuctional test
+      vars:
+        repo_path: '{{functional_repo_path}}'
+        repo_dest: '{{functional_repo_dest}}'
+        version: '{{testrig_version}}'
+        githubuser: ''
+        githubpassword: ''
+      include_role:
+        name: github
 
 - hosts: console
   gather_facts: true
-  vars_prompt:
-    - name: "testrig_version"
-      prompt: "Please provide git branch name"
-      private: no
-  tasks:
-    - set_fact:
-        testrig_version: "{{ testrig_version }}"
-
   roles:
     - {role: functional-test-setup, tags: [functional-test-setup]}
-#    - {role: db-backup, tag: [db-backup]}
+    - {role: functional-test-run, tags: [functional-test-run]}
