--- a/deployment/sandbox-v2/roles/functional-test-setup/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/functional-test-setup/tasks/main.yml
@@ -1,3 +1,12 @@
+- name: Update maven repository with settings file
+  become: yes
+  become_user: root
+  copy:
+    src: "{{ item }}"
+    dest: "{{ maven_dir }}"
+  with_fileglob:
+    - "{{ utils_dir }}/settings.xml"
+
 - name: Bulding automation demo service for dependency
   shell: "cd {{ functional_repo_dest }}/authentication-demo-service/ && mvn clean install"
 
