[MOSIP-11894] Config server git repo version updated.

--- a/deployment/v3/mosip/config_server/values.yaml
+++ b/deployment/v3/mosip/config_server/values.yaml
@@ -1,6 +1,6 @@
 gitRepo:
   uri: https://github.com/mosip/mosip-config
-  version: v3
+  version: 1.1.5_v3
   ## Folders within the base repo where properties may be found.
   searchFolders: ""
   private: false
